--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
 proglog==0.1.10
+progressbar2==4.2.0
 prompt-toolkit==3.0.39
 protobuf==4.23.4
 psycopg2==2.9.6
@@ -69,6 +70,7 @@ pycparser==2.21
 pygls==1.0.2
 Pygments==2.15.1
 pyspellchecker==0.7.2
+python-utils==3.8.1
 redis==4.6.0
 regex==2023.6.3
 requests==2.31.0
