--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 PyAudio==0.2.13
 pycparser==2.21
+pydub==0.25.1
 pygls==1.0.2
 Pygments==2.15.1
 pyspellchecker==0.7.2
