Initial webui commit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,109 +1,214 @@
-absl-py==1.4.0
+adlfs==2023.10.0
+aiobotocore==2.5.4
+aiohttp==3.8.6
+aiohttp-retry==2.8.3
+aioitertools==0.11.0
+aiosignal==1.3.1
 alabaster==0.7.13
+aliyun-python-sdk-core==2.14.0
+aliyun-python-sdk-kms==2.16.2
+amqp==5.2.0
+annotated-types==0.6.0
+antlr4-python3-runtime==4.9.3
+anyio==4.0.0
 appdirs==1.4.4
 appnope==0.1.3
+argcomplete @ file:///private/tmp/python-argcomplete-20231102-5393-1ppchg6/argcomplete-3.1.4
+astroid==2.15.6
 asttokens==2.2.1
-astunparse==1.6.3
+async-timeout==4.0.3
+asyncssh==2.14.0
+atpublic==4.0
 attrs==23.1.0
+azure-core==1.29.5
+azure-datalake-store==0.0.53
+azure-identity==1.15.0
+azure-storage-blob==12.19.0
 Babel==2.12.1
 backcall==0.2.0
-cachetools==5.3.1
+bcrypt==4.0.1
+billiard==4.2.0
+blinker==1.7.0
+boto3==1.28.17
+botocore==1.31.17
+cachetools==5.3.2
 cattrs==23.1.2
+celery==5.3.4
 certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.2.0
-decorator==4.4.2
+cffi @ file:///private/tmp/cffi-20231014-5567-1hyue8f/cffi-1.16.0
+charset-normalizer==3.1.0
+click @ file:///private/tmp/python-click-20231007-5528-1269rfd/click-8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+configobj==5.0.8
+crcmod==1.7
+cryptography @ file:///private/tmp/python-cryptography-20231024-6375-1k9sys9/cryptography-41.0.5
+decorator==5.1.1
+dependency-injector==4.41.0
+dictdiffer==0.9.0
+dill==0.3.6
+diskcache==5.6.3
+distro==1.8.0
 docutils==0.20.1
+dpath==2.1.6
+dulwich==0.21.6
+dvc==3.28.0
+dvc-azure==2.23.0
+dvc-data==2.20.0
+dvc-gdrive==2.20.0
+dvc-gs==2.22.1
+dvc-hdfs==2.19.0
+dvc-http==2.30.2
+dvc-objects==1.1.0
+dvc-oss==2.20.0
+dvc-render==0.6.0
+dvc-s3==2.23.0
+dvc-ssh==2.22.2
+dvc-studio-client==0.15.0
+dvc-task==0.3.0
+dvc-webdav==2.19.1
+dvc-webhdfs==2.19.0
+dvclive==3.2.0
+entrypoints==0.4
 esbonio==0.16.1
 executing==1.2.0
-ffmpeg-python==0.2.0
-filelock==3.12.2
-flatbuffers==23.5.26
-future==0.18.3
-gast==0.4.0
-google-auth==2.22.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.56.2
-h5py==3.9.0
+filelock==3.13.1
+Flask==3.0.0
+flatten-dict==0.4.2
+flufl.lock==7.1.1
+frozenlist==1.4.0
+fsspec==2023.9.2
+funcy==2.0
+gcsfs==2023.9.2
+gitdb==4.0.11
+GitPython==3.1.40
+google-api-core==2.13.0
+google-api-python-client==2.107.0
+google-auth==2.23.4
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
+google-cloud-core==2.3.3
+google-cloud-storage==2.13.0
+google-crc32c==1.5.0
+google-resumable-media==2.6.0
+googleapis-common-protos==1.61.0
+grandalf==0.8
+gto==1.5.0
+h11==0.14.0
+httpcore==1.0.1
+httplib2==0.22.0
+httpx==0.25.1
+hydra-core==1.3.2
 idna==3.4
-imageio==2.31.1
-imageio-ffmpeg==0.4.8
 imagesize==1.4.1
 ipdb==0.13.13
-ipython==8.14.0
+ipython==8.12.0
+isodate==0.6.1
+isort==5.12.0
+iterative-telemetry==0.0.8
+itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
-keras==2.13.1
-libclang==16.0.6
-llvmlite==0.40.1
+jmespath==0.10.0
+knack==0.11.0
+kombu==5.3.3
+lazy-object-proxy==1.9.0
 lsprotocol==2023.0.0a2
-Markdown==3.4.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
-more-itertools==9.1.0
-moviepy==1.0.3
-mpmath==1.3.0
-networkx==3.1
-numba==0.57.1
-numpy==1.24.3
+mccabe==0.7.0
+mdurl==0.1.2
+meson==1.2.2
+msal==1.25.0
+msal-extensions==1.0.0
+multidict==6.0.4
+networkx==3.2.1
+numpy==1.26.1
+oauth2client==4.1.3
 oauthlib==3.2.2
-openai-whisper==20231106
-opt-einsum==3.3.0
+omegaconf==2.3.0
+orjson==3.9.10
+oss2==2.18.3
+ossfs==2021.8.0
 packaging==23.1
 parso==0.8.3
+pathspec==0.11.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==10.0.0
-proglog==0.1.10
-progressbar2==4.2.0
-prompt-toolkit==3.0.39
-protobuf==4.23.4
+Pillow==9.5.0
+platformdirs==3.9.1
+portalocker==2.8.2
+prompt-toolkit==3.0.38
+protobuf==4.25.0
+psutil @ file:///private/tmp/python-psutil-20231015-5378-1ng7p6p/psutil-5.9.6
 psycopg2==2.9.6
-psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==14.0.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
-PyAudio==0.2.13
-pycparser==2.21
-pydub==0.25.1
+pycparser @ file:///private/tmp/pycparser-20231013-5787-1anpge2/pycparser-2.21
+pycryptodome==3.19.0
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydot==1.4.2
+PyDrive2==1.17.0
+pygit2 @ file:///private/tmp/pygit2-20231030-5464-1umz75e/pygit2-1.13.2
 pygls==1.0.2
-Pygments==2.15.1
+Pygments==2.15.0
+pygtrie==2.5.0
+PyJWT==2.8.0
+pylint==2.17.4
+pyOpenSSL==23.3.0
+pyparsing @ file:///private/tmp/python-pyparsing-20231009-5447-tvsh4t/pyparsing-3.1.1
 pyspellchecker==0.7.2
-python-utils==3.8.1
-redis==4.6.0
-regex==2023.6.3
+python-dateutil==2.8.2
+PyYAML @ file:///private/tmp/pyyaml-20231018-5610-1rdh755/PyYAML-6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+rich==13.6.0
 rsa==4.9
+ruamel.yaml==0.18.5
+ruamel.yaml.clib==0.2.8
+s3fs==2023.9.2
+s3transfer==0.6.2
+scmrepo==1.4.0
+semver==3.0.2
+shortuuid==1.0.11
+shtab==1.6.4
 six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
 snowballstemmer==2.2.0
-sounddevice==0.4.6
-SpeechRecognition==3.10.0
-Sphinx==7.1.1
+Sphinx==7.0.1
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
-spotipy==2.23.0
+sqltrie==0.8.0
+sshfs==2023.10.0
 stack-data==0.6.2
-sympy==1.12
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-macos==2.13.0
-termcolor==2.3.0
-tiktoken==0.3.1
-torch==2.0.1
-tqdm==4.65.0
+tabulate==0.9.0
+tk==0.1.0
+tomlkit==0.11.8
+tqdm==4.66.1
 traitlets==5.9.0
 typeguard==3.0.2
-typing_extensions==4.5.0
-urllib3==1.26.16
+typer==0.9.0
+typing_extensions @ file:///private/tmp/python-typing-extensions-20231008-5501-1ralzsu/typing_extensions-4.8.0
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.26.18
+vine==5.1.0
+voluptuous==0.13.1
 wcwidth==0.2.6
-Werkzeug==2.3.6
+webdav4==0.9.8
+Werkzeug==3.0.1
 wrapt==1.15.0
+yarl==1.9.2
+zc.lockfile==3.0.post1
