--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 adlfs==2023.10.0
 aiobotocore==2.5.4
+aiofiles==23.2.1
 aiohttp==3.8.6
 aiohttp-retry==2.8.3
 aioitertools==0.11.0
@@ -7,10 +8,11 @@ aiosignal==1.3.1
 alabaster==0.7.13
 aliyun-python-sdk-core==2.14.0
 aliyun-python-sdk-kms==2.16.2
+altair==5.1.2
 amqp==5.2.0
 annotated-types==0.6.0
 antlr4-python3-runtime==4.9.3
-anyio==4.0.0
+anyio==3.7.1
 appdirs==1.4.4
 appnope==0.1.3
 argcomplete @ file:///private/tmp/python-argcomplete-20231102-5393-1ppchg6/argcomplete-3.1.4
@@ -43,8 +45,10 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 configobj==5.0.8
+contourpy==1.2.0
 crcmod==1.7
 cryptography @ file:///private/tmp/python-cryptography-20231024-6375-1k9sys9/cryptography-41.0.5
+cycler==0.12.1
 decorator==5.1.1
 dependency-injector==4.41.0
 dictdiffer==0.9.0
@@ -74,10 +78,13 @@ dvclive==3.2.0
 entrypoints==0.4
 esbonio==0.16.1
 executing==1.2.0
+fastapi==0.104.1
+ffmpy==0.3.1
 filelock==3.13.1
 Flask==3.0.0
 flatten-dict==0.4.2
 flufl.lock==7.1.1
+fonttools==4.44.3
 frozenlist==1.4.0
 fsspec==2023.9.2
 funcy==2.0
@@ -94,15 +101,19 @@ google-cloud-storage==2.13.0
 google-crc32c==1.5.0
 google-resumable-media==2.6.0
 googleapis-common-protos==1.61.0
+gradio==4.3.0
+gradio_client==0.7.0
 grandalf==0.8
 gto==1.5.0
 h11==0.14.0
 httpcore==1.0.1
 httplib2==0.22.0
 httpx==0.25.1
+huggingface-hub==0.19.4
 hydra-core==1.3.2
 idna==3.4
 imagesize==1.4.1
+importlib-resources==6.1.1
 ipdb==0.13.13
 ipython==8.12.0
 isodate==0.6.1
@@ -112,12 +123,16 @@ itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
 jmespath==0.10.0
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.1
+kiwisolver==1.4.5
 knack==0.11.0
 kombu==5.3.3
 lazy-object-proxy==1.9.0
 lsprotocol==2023.0.0a2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib==3.8.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mdurl==0.1.2
@@ -134,6 +149,7 @@ orjson==3.9.10
 oss2==2.18.3
 ossfs==2021.8.0
 packaging==23.1
+pandas==2.1.3
 parso==0.8.3
 pathspec==0.11.2
 pexpect==4.8.0
@@ -156,6 +172,7 @@ pydantic==2.4.2
 pydantic_core==2.10.1
 pydot==1.4.2
 PyDrive2==1.17.0
+pydub==0.25.1
 pygit2 @ file:///private/tmp/pygit2-20231030-5464-1umz75e/pygit2-1.13.2
 pygls==1.0.2
 Pygments==2.15.0
@@ -166,17 +183,23 @@ pyOpenSSL==23.3.0
 pyparsing @ file:///private/tmp/python-pyparsing-20231009-5447-tvsh4t/pyparsing-3.1.1
 pyspellchecker==0.7.2
 python-dateutil==2.8.2
+python-multipart==0.0.6
+pytz==2023.3.post1
 PyYAML @ file:///private/tmp/pyyaml-20231018-5610-1rdh755/PyYAML-6.0.1
+referencing==0.31.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rich==13.6.0
+rpds-py==0.13.0
 rsa==4.9
 ruamel.yaml==0.18.5
 ruamel.yaml.clib==0.2.8
 s3fs==2023.9.2
 s3transfer==0.6.2
 scmrepo==1.4.0
+semantic-version==2.10.0
 semver==3.0.2
+shellingham==1.5.4
 shortuuid==1.0.11
 shtab==1.6.4
 six==1.16.0
@@ -193,9 +216,11 @@ sphinxcontrib-serializinghtml==1.1.5
 sqltrie==0.8.0
 sshfs==2023.10.0
 stack-data==0.6.2
+starlette==0.27.0
 tabulate==0.9.0
 tk==0.1.0
-tomlkit==0.11.8
+tomlkit==0.12.0
+toolz==0.12.0
 tqdm==4.66.1
 traitlets==5.9.0
 typeguard==3.0.2
@@ -204,10 +229,12 @@ typing_extensions @ file:///private/tmp/python-typing-extensions-20231008-5501-1
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.18
+uvicorn==0.24.0.post1
 vine==5.1.0
 voluptuous==0.13.1
 wcwidth==0.2.6
 webdav4==0.9.8
+websockets==11.0.3
 Werkzeug==3.0.1
 wrapt==1.15.0
 yarl==1.9.2
